--- a/src/style/input.css
+++ b/src/style/input.css
@@ -1,4 +1,14 @@
 @import "tailwindcss";
+@plugin 'flowbite/plugin';
+
+@source "../node_modules/flowbite-svelte/dist";
+
+@layer base {
+  /* disable chrome cancel button */
+  input[type="search"]::-webkit-search-cancel-button {
+    display: none;
+  }
+}
 
 @font-face {
   font-family: 'GothicDefault';
@@ -31,6 +41,29 @@
   -moz-osx-font-smoothing: grayscale;
 } */
 
+*::selection {
+    background: #df7b41;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;               /* ширина scrollbar */
+}
+*::-webkit-scrollbar-track {
+    background: #2c2c2c;        /* цвет дорожки */
+    margin: 4px 0;
+    border-radius: 6px;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: #404040;    /* цвет плашки */
+    border-radius: 6px;       /* закругления плашки */
+    border: 1px solid #363636;  /* padding вокруг плашки */
+    cursor: default;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #5e5e5e;    /* цвет плашки */
+}
+
 body {
   font-family: 'GothicDefault', sans-serif;
   color: #F3EFD4;
@@ -59,6 +92,10 @@ h1 {
 
 h2 {
   font-size: 24px;
+}
+
+h3 {
+  font-size: 20px;
 }
 
 .text-shd {
