--- a/src/style/input.css
+++ b/src/style/input.css
@@ -67,15 +67,16 @@
 body {
   font-family: 'GothicDefault', sans-serif;
   color: #F3EFD4;
-}
 
-main {
-  width: 100%;
-  height: 100vh;
   background: linear-gradient(180deg,rgba(24, 24, 24, 0) 0%, rgba(24, 24, 24, 0) 40%, rgba(24, 24, 24, 1) 100%), 
                             linear-gradient(90deg,rgba(24, 24, 24, 1) 0%, rgba(24, 24, 24, 0) 35%, rgba(24, 24, 24, 0) 65%, rgba(24, 24, 24, 1) 100%), 
                             url(../assets/parchment-background.jpg);
   background-size: cover;
+}
+
+main {
+  width: 100%;
+  /* height: 100vh; */
 
   display: flex;
   flex-direction: column;
