--- a/src/style/input.css
+++ b/src/style/input.css
@@ -47,6 +47,7 @@
 
 *::-webkit-scrollbar {
     width: 10px;               /* ширина scrollbar */
+    height: 12px;
 }
 *::-webkit-scrollbar-track {
     background: #2c2c2c;        /* цвет дорожки */
