--- a/src/style/input.css
+++ b/src/style/input.css
@@ -65,6 +65,10 @@
     background-color: #5e5e5e;    /* цвет плашки */
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: 'GothicDefault', sans-serif;
   color: #F3EFD4;
@@ -72,7 +76,10 @@ body {
   background: linear-gradient(180deg,rgba(24, 24, 24, 0) 0%, rgba(24, 24, 24, 0) 40%, rgba(24, 24, 24, 1) 100%), 
                             linear-gradient(90deg,rgba(24, 24, 24, 1) 0%, rgba(24, 24, 24, 0) 35%, rgba(24, 24, 24, 0) 65%, rgba(24, 24, 24, 1) 100%), 
                             url(../assets/parchment-background.jpg);
+  /* background-size: auto 100vh; */
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 main {
@@ -102,4 +109,14 @@ h3 {
 
 .text-shd {
   text-shadow: 2px 2px 2.5px rgb(0 0 0 / 0.5);
+}
+
+.hero-shd {
+  -webkit-filter: drop-shadow(-4px 4px 3px rgb(0 0 0 / 0.5));
+  filter: drop-shadow(-4px 4px 3px rgb(0 0 0 / 0.5));
+}
+
+.hero-shd-r {
+  -webkit-filter: drop-shadow(4px 4px 3px rgb(0 0 0 / 0.5));
+  filter: drop-shadow(4px 4px 3px rgb(0 0 0 / 0.5));
 }
